Add link to Chinese

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <header>
     <title>Johan Andersson</title>
@@ -34,6 +34,7 @@
             <li><p>Javascript</p></li>
             <li><a href="http://johan-andersson01.github.io/animations/fractaltree/fractal.html">Fractal tree</a></li>
             <li><a href="https://johan-andersson01.github.io/game-of-life/index.html">Game of Life</a></li>
+            <li><a href="http://users.student.lth.se/dat14jan/chinese/shuffle.htm">Chinese character studying</a></li>
         </ul>
     </menu>
     <h2>Time until you can hire me (for real):</h2>
