--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <h2>Info</h2>
     <menu>
         <ul>
-            <li>[Fourth year in Computer Science @ LTH]</li>
-            <li>[Java, Python, CSS, Javascript]</li>
-            <li>[Current interests: climbing, cooking, programming]</li>
-            <li>[Based in Lund, Sweden]</li>
+            <li>School: "Fourth year in Computer Science @ LTH"</li>
+            <li>Languages: [Java, Python, Ruby, Javascript]</li>
+            <li>Interests: [climbing, cooking, programming, movies]</li>
+            <li>Location: (Lund, Sweden)</li>
             <li>17-09-10: School is fun. All is good.</li>
         </ul>
     </menu>
