--- a/index.html
+++ b/index.html
@@ -17,24 +17,56 @@
     <h2>Info</h2>
     <menu>
         <ul>
-            <li>School: "Fourth year in Computer Science @ LTH"</li>
-            <li>Languages: [Java, Python, Ruby, Javascript]</li>
-            <li>Interests: [climbing, cooking, programming, movies]</li>
-            <li>Location: (Lund, Sweden)</li>
-            <li>17-09-10: School is fun. All is good.</li>
+            <li>School: 
+                <ul>
+                    <li>Fourth year in Computer Science @ LTH</li>
+                </ul>
+            </li>
+            <li>Languages:
+                <ul>
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>Ruby</li>
+                    <li>Javascript</li>
+                </ul>
+                </li>
+            <li>Interests: 
+                <ul>
+                    <li>Climbing</li>
+                <li>Programming</li>
+            <li>Cooking</li>
+        <li>Movies</li></ul>
+    </li>
+            <li>Location:
+                <ul>
+                    <li>Lund, Sweden</li>
+                </ul>
+            </li>
+            <li>Notes:
+                <ul>
+                        <li>17-09-10: School is fun. All is good.</li>
+                </ul>
+            </li>
+            
         </ul>
     </menu>
 
-    <h2>Projects:</h2>
+    <h2>Spare time projects:</h2>
     <menu>
         <ul>
-            <li><p>CSS</p></li>
-            <li><a href="http://johan-andersson01.github.io/animations/orbit.html">loading animation #1</a></li>
-            <li><a href="http://johan-andersson01.github.io/animations/triple-loading.html">loading animation #2</a></li>
-            <li><p>Javascript</p></li>
-            <li><a href="http://johan-andersson01.github.io/animations/fractaltree/fractal.html">Fractal tree</a></li>
-            <li><a href="https://johan-andersson01.github.io/game-of-life/index.html">Game of Life</a></li>
-            <li><a href="http://users.student.lth.se/dat14jan/chinese/shuffle.htm">Chinese character studying</a></li>
+            <li><p>CSS</p>
+                <ul>
+                     <li><a href="http://johan-andersson01.github.io/animations/orbit.html">loading animation #1</a></li>
+                     <li><a href="http://johan-andersson01.github.io/animations/triple-loading.html">loading animation #2</a></li>
+                </ul>
+            </li>
+            <li><p>Javascript</p>
+                <ul>
+                        <li><a href="http://johan-andersson01.github.io/animations/fractaltree/fractal.html">Fractal tree</a></li>
+                        <li><a href="https://johan-andersson01.github.io/game-of-life/index.html">Game of Life</a></li>
+                        <li><a href="http://users.student.lth.se/dat14jan/chinese/shuffle.htm">Chinese character studying</a></li>
+                </ul>
+            </li>
         </ul>
     </menu>
     <h2>Time until you can hire me (for real):</h2>
