add biblion to projects

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     <h2>Spare time projects:</h2>
     <menu>
         <ul>
+            <li><p>Rails</p></li>
+                <ul>
+                    <li><a href="https://biblion.se">Biblion</a></li>
+                </ul>
             <li><p>CSS</p>
                 <ul>
                      <li><a href="http://johan-andersson01.github.io/animations/orbit.html">loading animation #1</a></li>
