--- a/index.html
+++ b/index.html
@@ -6,108 +6,75 @@
 <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <img src="https://avatars1.githubusercontent.com/u/17073827?s=460&v=4">
+        </div>
+        <div class="container">
+            <section>
+                    <h1>Johan Andersson</h1>
+                    <p>4th year Computer Science student in Lund.</p>
+                    <p>Currently looking for a summer job!</p>
+                    <p>Do you think we'd be a good fit? <a class="alert" href="mailto:dat14jan@student.lu.se">Send an email!</a></p>
+            </section>
+                
+        </div>
+    </header>
 
-<div class="wrapper">
-	<div class="left">
-		<div class="bio box">
-			<a href="https://github.com/johan-andersson01"><div class="row1">
-				<img src="https://avatars1.githubusercontent.com/u/17073827?s=460&v=4" width="50px">
-				<h2>Johan Andersson</h2>
-				</div>
-			</a>
-			<div class="row2">
-				<menu>
-				<ul>
-				<li><a href="mailto:johan-andersson01@protonmail.com">[Mail]</a></li>
-				<li><a href="https://www.linkedin.com/in/johan-a-97422b140/">[LinkedIn]</a></li>
-				<li><a href="https://scholar.social/@blackswan4">[Mastodon]</a></li>
-				</menu>
-			</div>
-		</div>
+    <main>
+        <section>
+            <h2>I like to ...</h2>
+            <ul>
+                <li>go climbing</li>
+                <li>optimize problems</li>
+                <li>watch foreign film</li>
+                <li>read books</li>
+                <li>learn stuff</li>
+            </ul>
+            <h2>I want to ...</h2>
+            <ul>
+                <li>lift heavy</li>
+                <li>learn Rust</li>
+                <li>read more books</li>
+                <li>DJ more</li>
+                <li>become fluent in JS</li>
+            </ul>
+            <h2>Free time projects </h2>
+            <ul>
+                <div class="double-col">
+                    <li>
+                        <span class="left">
+                            <a href="https://biblion.se">Biblion.se</a>
+                        </span>
+                        <span class="right">
+                            a free book donations service
+                        </span>
+                    </li>
+                    <div class="li-info">
+                        Rails
+                    </div>
+                </div>
+                <div class="double-col">
+                    <li>
+                        <span class="left">
+                            <a href="https://github.com/johan-andersson01/skanetrafiken_feeder">Skånetrafiken Feeder</a>
+                        </span>
+                        <span class="right">
+                            a live feed of your next bus/train departures in Skåne
+                        </span>
+                    </li>
+                    <div class="li-info">
+                            NodeJS
+                    </div>
+                </div>
+            </ul>
+            <h2>You can find me on </h2>
+            <ul>
+                    <li><a href="https://www.linkedin.com/in/johan-a-97422b140/">LinkedIn</a></li>
+                    <li><a href="https://github.com/johan-andersson01">GitHub</a></li>
+                </ul>
+            </section>
+    </main>
 
-		<div class="pinned box">
-				<a href="#">
-					<div class="row1">
-					<h2>Pinned note</h2>
-					</div>
-				</a>
-				<div class="boxr">
-					<menu>
-						<ul>
-							<li><p>- Studying my 4th year of CS @ LTH, Lund</p></li>
-							<li><p>- Window shopping for a job</p></li>
-							<li><p>- Note that many of my skills have been developed during school projects, code of which I do not publish</p></li>
-						</ul>
-					</menu>
-				</div>
-		</div>
-
-		<div class="projects box">
-				<a href="#">
-					<div class="row1">
-					<h2>Launched Projects</h2>
-					</div>
-				</a>
-				<div class="boxr">
-					<menu>
-						<ul>
-							<a href="https://biblion.se"><li>Biblion - a free book donation service</a>
-						</ul>
-					</menu>
-				</div>
-		</div>
-
-		<div class="tags box">
-				<a href="#">
-					<div class="row1">
-					<h2>Interests</h2>
-					</div>
-				</a>
-				<div class="boxr">
-					<menu>
-						<ul>
-							<a href="#"><li>#climbing</a>
-							<a href="#"><li>#cooking</a>
-							<a href="#"><li>#programming</a>
-							<a href="#"><li>#movies</a>
-							<a href="#"><li>#electronic</a>
-							<a href="#"><li>#open-source</a>
-							<a href="#"><li>#free-software</a>
-							<a href="#"><li>#minimalism</a>
-						</ul>
-					</menu>
-				</div>
-			</div>
-
-		<div class="tags box">
-			<a href="#">
-				<div class="row1">
-				<h2>Skills</h2>
-				</div>
-			</a>
-			<div class="boxr">
-				<menu>
-					<ul>
-						<a href="https://github.com/johan-andersson01/biblion"><li>#rails</a>
-						<a href="https://github.com/johan-andersson01/biblion"><li>#ruby</a>
-						<a href="#"><li>#java</a>
-						<a href="#"><li>#python</a>
-						<a href="#"><li>#javascript</a>
-						<a href="#"><li>#php</a>
-						<a href="#"><li>#css</a>
-						<a href="#"><li>#git</a>
-						<a href="#"><li>#python</a>
-					</ul>
-				</menu>
-			</div>
-		</div>
-
-
-	</div>
-
-	<iframe allowfullscreen sandbox="allow-top-navigation allow-scripts" width="400" height="800" class="feed box"
-		src="https://www.mastofeed.com/api/feed?url=https%3A%2F%2Fscholar.social%2Fusers%2Fblackswan4.atom&theme=light&size=100&header=false">
-	</iframe>
-</div>
 </body>
 </html>
