--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <title>Johan Andersson</title>
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="index.css">
+<link rel="stylesheet" type="text/css" href="/index.css">
 </head>
 <body>
     <header>
