--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				  </li>
 				{% endfor %}
 			</ul>
-			<h2>Recently read books: </h2>
+			<h2>Recently read books </h2>
 			<ul>
 				{% for book in site.data.books %}
 					<li>
@@ -81,7 +81,7 @@
 					</li>
 				{% endfor %}
 			</ul>
-			<h2>You can find me on: </h2>
+			<h2>You can find me on </h2>
             <ul>
 				{% for platform in site.data.social %}
 					{% if platform.id == null %}
