Add minima theme, polish the Doing Good Better post

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <h1>Johan Andersson</h1>
                     <p>4th year Computer Science student in Lund.</p>
 					<p>Want to get in touch? </p>
-					<a class="alert" href="mailto:dat14jan@student.lu.se">Send an email!</a>
+					<a class="alert" href="mailto:johan-andersson01@protonmail.com">Send an email!</a>
             </section>
                 
         </div>
