--- a/index.html
+++ b/index.html
@@ -7,108 +7,138 @@
 <title>Johan Andersson</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="/index.css">
+<link rel="stylesheet" type="text/css" href="/global.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <img src="https://avatars1.githubusercontent.com/u/17073827?s=460&v=4">
-        </div>
-        <div class="container">
-            <section>
-                    <h1>Johan Andersson</h1>
-                    <p>4th year Computer Science student in Lund.</p>
-					<p>Want to get in touch? </p>
-					<a class="alert" href="mailto:johan-andersson01@protonmail.com">Send an email!</a>
-            </section>
-                
-        </div>
-    </header>
-
+    {% include header.html %}
     <main>
         <section>
-            <h2>I like to ...</h2>
             <ul>
-				{% for thing in site.data.interests %}
-					<li>{{thing}}</li>
-				{% endfor %}
+                <li>
+                    <span class="left">
+                        free time fun
+                    </span>
+                </li>
+                {% for project in site.data.projects %}
+                <li>
+                    <a href="{{project.url}}">
+                        <span class="left">
+                            {{project.title}}
+                        </span>
+                        <span class="right">
+                            {{project.description}}
+                        </span>
+                    </a>
+                </li>
+                {% endfor %}
             </ul>
-            <h2>I want to ...</h2>
+            {% assign nbrposts = site.posts | size %}
             <ul>
-				{% for thing in site.data.todo %}
-					<li>{{thing}}</li>
-				{% endfor %}
+                <li>
+                    <span class="left">
+                        blog posts
+                    </span>
+                </li>
+                {% if nbrposts == 0 %}
+                <li>
+                    <span class="left">
+                        sorry, no posts yet
+                    </span>
+                </li>
+                {% endif %}
+                {% for post in site.posts %}
+                <li>
+                    <a href="{{ post.url }}">
+                        <span class="left">
+                            {{ post.title }}
+                        </span>
+                        <span class="right">
+                            {{post.date | date_to_string}}
+                        </span>
+                    </a>
+                  </li>
+                {% endfor %}
             </ul>
-            <h2>Free time projects </h2>
             <ul>
-				{% for project in site.data.projects %}
-						<li>
-							<span class="left">
-								<a href="{{project.url}}">{{project.title}}</a>
-							</span>
-							<span class="right">
-								{{project.description}}
-							</span>
-						</li>
-				{% endfor %}
-			</ul>
-			{% assign nbrposts = site.posts | size %}
-			{% unless nbrposts == 0 %}
-				<h2>Blog posts: </h2>
-			{% endunless %}
-			<ul>
-				{% for post in site.posts %}
-				<li>
-					<span class="left">
-						<a href="{{ post.url }}">{{ post.title }}</a>
-					</span>
-					<span class="right">
-						{{post.date | date_to_string}}
-					</span>
-				  </li>
-				{% endfor %}
-			</ul>
-			<h2>Recently read books </h2>
-			<ul>
-				{% for book in site.data.books %}
-					<li>
-						<span class="left">
-							{{ book.author }}: {{ book.title }}
-						</span>
-						<span class="right">
-							{{book.date | date_to_string}}
-							<span class="bookrating">{{book.rating}}</span>
-						</span>
-					</li>
-				{% endfor %}
-			</ul>
-			<h2>You can find me on </h2>
+                <li>
+                    <span class="left">
+                        social
+                    </span>
+                </li>
+                {% for platform in site.data.social %}
+                        <li>
+                            <a href="{{platform.url}}">
+                                <span class="left">
+                                    {{platform.name}}
+                                </span>
+                            </a>
+                        </li>
+                {% endfor %}
+            </ul>
             <ul>
-				{% for platform in site.data.social %}
-					{% if platform.id == null %}
-						<li><a href="{{platform.url}}">{{platform.name}}</a></li>	
-					{% else %}
-						<li><a href="{{platform.url}}">{{platform.name}}</a><div class="right" id=hash> {{platform.id}}</div></li>
-					{% endif %}
-				{% endfor %}
-			</ul>
-		</section>
-	</main>
-	
-	<script>
-		var ratings = document.getElementsByClassName("bookrating");
+                <li>
+                    <span class="left">
+                        interests
+                    </span>
+                </li>
+                {% for interest in site.data.interests %}
+                    <li>
+                        <span class="left">
+                            {{interest}}
+                        </span>
+                    </li>
+                {% endfor %}
+            </ul>
+            <ul>
+                <li>
+                    <span class="left">
+                        goals
+                    </span>
+                </li>
+                {% for goal in site.data.goals %}
+                    <li>
+                        <span class="left">
+                            {{goal}}
+                        </span>
+                    </li>
+                {% endfor %}
+            </ul>
+            <ul>
+                <li>
+                    <span class="left">
+                        recently read books
+                    </span>
+                </li>
+                {% for book in site.data.books %}
+                    <li>
+                        <span class="left">
+                            {{ book.author }}: {{ book.title }}
+                        </span>
+                        <span class="right">
+                            {{book.date | date_to_string}}
+                            <span class="bookrating">{{book.rating}}</span>
+                        </span>
+                    </li>
+                {% endfor %}
+            </ul>
+        </section>
+    </main>
 
-		for (x = 0; x < ratings.length; x++) {
-			let rating =Number.parseInt(ratings[x].innerHTML);
-			ratings[x].innerHTML = '';
-			for (i = 0; i < 5; i++) {
-				if (i < rating) {
-					ratings[x].innerHTML += "<img src=fruit-filled.png>";
-				}
-				else {
-					ratings[x].innerHTML += "<img src=fruit.png>";
-				}
-			}
-		}
-	</script>
+    <script>
+        let ratings = document.getElementsByClassName("bookrating");
+
+        for (x = 0; x < ratings.length; x++) {
+            let rating = Number.parseInt(ratings[x].innerHTML);
+            ratings[x].innerHTML = '';
+            for (i = 0; i < 5; i++) {
+                if (i < rating) {
+                    ratings[x].innerHTML += '<span class="rating-filled">👏</span>';
+                }
+                else {
+                    ratings[x].innerHTML += '<span class="rating-unfilled">👏</span>';
+                }
+            }
+        }
+    </script>
 </body>
 </html>
